# Proyecto1-Paralelal

./: .gitignore  README.md
screensaver/: CMakeLists.txt  main.cpp  parallel-2.cpp  parallel-3.cpp  parallel.cpp  sequential.cpp  speeup.py  testing.cpp
